# mcp-server-mek

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.cursor/: mcp.json
docs/: architecture.md
mek_mcp/: __init__.py  models.py  server.py  urls.py
mek_mcp/clients/: advanced_search.py  base.py  detailed_scraper.py  fulltext_search.py  simple_search.py
mek_mcp/parsers/: results.py
scripts/: discover_forms.py
tests/: test_advanced_search.py  test_discover_forms.py
tests/fixtures/: advanced_arany_result.html
