[project]
name = "mek-mcp"
version = "0.1.0"
description = "MCP server for searching the Hungarian Electronic Library (MEK)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "mcp>=1.0,<2",
    "rich>=13.0",
    "playwright>=1.49",
    "uvicorn>=0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mek-mcp = "mek_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mek_mcp"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "network: tests that call the live MEK website",
]
